# clash-bot

./: .gitignore  README.md  pyproject.toml
assets/: buildings.json
docs/: asset-acquisition.md  attack-strategy.md  base-management-strategy.md  universal-bot-blueprint.md  universal-recognition-plan.md
notebooks/: clashbot_autoplay.ipynb  clashbot_control.py  clashbot_universal.ipynb
scripts/: acquire_asset_sources.py  asset_sources.json  await_sc2fla_sort.py  batch_extract_sc2fla.py  build_composite_assets.py  build_visual_asset_cache.py  capture_coc_wiki.py  convert_sctx_textures.py  convert_supercell_flat.py  download_supercell_fankit.py  evaluate_building_recognizer.py  extract_game_package_assets.py  extract_management_templates.py  extract_sc2fla_project.py  index_sc2fla_dump.py  install_sc2_decoder_tools.py  label_buildings.py  pull_memu_game_assets.py  report_asset_coverage.py  sanitize_sctx_headers.py  sort_sc2fla_assets.py  train_asset_model.py  validate_detector_candidates.py
tests/: test_adb_client.py  test_anti_afk.py  test_army.py  test_asset_acquisition.py  test_asset_catalog.py  test_asset_model.py  test_attack.py  test_attack_execution.py  test_autonomy.py  test_await_sc2fla_sort.py  test_base_management.py  test_battle.py  test_boosts.py  test_camera.py  test_composite_assets.py  test_detection_verification.py  test_evaluate_building_recognizer.py  test_fankit.py  test_fankit_downloader.py  test_farming.py  test_find_match.py  test_flat_converter_wrapper.py  test_human.py  test_label_buildings.py  test_layout.py  test_loot_planner.py  (+18 more)
(+34 files in other folders)
