[project]
name = "clashbot"
version = "0.1.0"
description = "Clash of Clans automation bot"
requires-python = ">=3.10"
dependencies = [
    "opencv-python>=4.8",
    "numpy>=1.24",
]

[project.optional-dependencies]
wiki-capture = ["playwright>=1.49"]

[tool.setuptools.packages.find]
where = ["src"]
